[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/battle_hud/technique_swap_popup.gd" id="1"]

[node name="TechniqueSwapPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -160.0
offset_right = 200.0
offset_bottom = 160.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="VBox" unique_name_in_owner=true]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Choose a technique to forget:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Separator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)

[node name="TechniqueList" type="VBoxContainer" parent="VBox/ScrollContainer" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DontLearnButton" type="Button" parent="VBox" unique_name_in_owner=true]
layout_mode = 2
text = "Don't Learn"
